# dancer_robot

./: README.md
dancer-motion/: CMakeLists.txt  package.xml
dancer-motion/config/: ankle_pitch_param.yml  ankle_roll_param.yml  ankle_x_param.yml  ankle_y_param.yml  ankle_yaw_param.yml  ankle_z_param.yml  com_x_param.yml  com_y_param.yml  com_z_param.yml  fastkick.yml  goalie.yml  kick.yml  motion.yml  motor.yml  pvhipY.yml  setup.yml  sidekick.yml
dancer-motion/config/climb_param/: back_climb.txt  forward_climb.txt
dancer-motion/config/parameters/: motion_hub_param.yaml
dancer-motion/config/walk_param/: foot_z.yml
dancer-motion/include/: ForwardKinematics.h  InverseKinematics.h  OneFootLanding.h  Parameters.h  PendulumWalk.h  ThreeInterpolation.h  climb.h
dancer-motion/include/Polynomial/: Polynomial.hpp  PolynomialInternal.hpp
dancer-motion/include/Utility/: dmotion_math.hpp
dancer-motion/launch/: main.launch  motion_hub.launch
dancer-motion/node/: main.cpp  motion_hub.cpp
dancer-motion/src/: ForwardKinematics.cpp  InverseKinematics.cpp  OneFootLanding.cpp  Parameters.cpp  PendulumWalk.cpp  ThreeInterpolation.cpp  climb.cpp
dancer_keyboard/: CMakeLists.txt  back_climb.txt  climb_write.cpp  dancer_keyboard (20.03.10).py  dancer_keyboard.py  forward_climb.txt  package.xml
dancer_urdf_model/: manifest.xml
dancer_urdf_model/config/: dancer_control.yaml
dancer_urdf_model/launch/: display.launch  gazebo.launch
dancer_urdf_model/meshes/: arm_left.STL  arm_right.STL  body_camera.STL  body_head.STL  body_head2.STL  body_hip.STL  body_hip2_left.STL  body_hip2_right.STL  body_hip_left.STL  body_hip_right.STL  hand_left.STL  hand_right.STL  leg2_left.STL  leg2_right.STL  leg3_left.STL  leg3_right.STL  leg4_left.STL  leg4_right.STL  leg_left.STL  leg_right.STL
dancer_urdf_model/robots/: dancer_urdf_model.URDF  dancer_urdf_model.gv  dancer_urdf_model.xacro  test.sdf  test.urdf  test.xacro
dancer_urdf_model/textures/: inertia_calculator.py  length_calculator.py  listen_motion.py  urdf.rviz
dancer_urdf_model/worlds/: dancer_world.config  dancer_world.material  dancer_world.world
