<?xml version="1.0"?>
<package format="2">
  <name>dancer_keyboard</name>
  <version>0.0.0</version>
  <description>The dancer_keyboard package</description>
  <maintainer email="ruby@todo.todo">ruby</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
